<resources>
    <string name="app_name">SSS</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="connect_mysql">connect mysql</string>
    <string name="insert_data">insert data</string>
    <string name="delete_data">delete data</string>
    <string name="update_data">update data</string>
    <string name="query_data">query data</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="create_session">Create Session</string>
    <string name="professor_name">Professor Name</string>
    <string name="course_name_number">Course Name/Number</string>
    <string name="university">University</string>
    <string name="session_form">Session Form</string>
    <string-array name="role_name">
        <item>Student</item>
        <item>Professor</item>
    </string-array>
</resources>
