<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zihan.sss.CreateSession"
    android:orientation="vertical"
    android:background="#0BB990"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_form"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/university"
        android:id="@+id/university"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/course_name_number"
        android:id="@+id/course"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/professor_name"
        android:id="@+id/professor"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />
    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/create_session"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="createSession"
        />
</LinearLayout>